<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/_10sdp"
    android:paddingRight="@dimen/_10sdp"
    android:paddingBottom="@dimen/_5sdp"
    android:paddingTop="@dimen/_5sdp"
    android:splitMotionEvents="false"
    android:background="@drawable/background2" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp">
        <Button
            android:onClick="quitSurivial"
            android:background="@drawable/wrongbutton"
            android:textSize="@dimen/_15sdp"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_27sdp"
            android:enabled="true"
            android:gravity="center"
            android:text="Quit" />
        <TextView
            android:background="@drawable/correctbutton"
            android:textSize="@dimen/_15sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/score"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <LinearLayout
        android:splitMotionEvents="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0px"
        android:layout_marginBottom="@dimen/_5sdp">
        <TextView
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10sdp"
            android:layout_weight="5"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:gravity="center" />
        <TextView
            android:layout_marginRight="@dimen/_5sdp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            android:id="@+id/lvl1"
            android:layout_weight="4"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:text="Level 1"
            android:gravity="center" />
        <TextView
            android:layout_marginRight="@dimen/_5sdp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            android:id="@+id/lvl2"
            android:layout_weight="4"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:text="Level 2"
            android:gravity="center" />
        <TextView
            android:layout_marginRight="@dimen/_5sdp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            android:id="@+id/lvl3"
            android:layout_weight="4"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:text="Level 3"
            android:gravity="center" />
        <TextView
            android:layout_marginRight="@dimen/_5sdp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            android:id="@+id/lvl4"
            android:layout_weight="4"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:text="Level 4"
            android:gravity="center" />
        <TextView
            android:layout_marginRight="@dimen/_5sdp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            android:id="@+id/lvl5"
            android:layout_weight="4"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:text="Level 5"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:splitMotionEvents="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0px"
        android:layout_marginBottom="@dimen/_5sdp">

        <TextView
            android:textColor="@color/color4"
            android:textSize="@dimen/_17sdp"
            android:id="@+id/textView"
            android:layout_weight="5"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:text="@string/subject1"
            android:gravity="center" />
        <Button
            android:background="@drawable/menubutton"
            android:id="@+id/button10"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="4"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:onClick="subject1"
            android:text="@string/btn1_level1" />
        <Button
            android:id="@+id/button27"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject1"
            android:text="@string/btn1_level2" />
        <Button
            android:id="@+id/button28"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject1"
            android:text="@string/btn1_level3" />
        <Button
            android:id="@+id/button13"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject1"
            android:text="@string/btn1_level4" />
        <Button
            android:id="@+id/button20"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject1"
            android:text="@string/btn1_level5" />
    </LinearLayout>

    <LinearLayout
        android:splitMotionEvents="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0px"
        android:layout_marginBottom="@dimen/_5sdp">

        <TextView
            android:textColor="@color/color4"
            android:textSize="@dimen/_17sdp"
            android:id="@+id/textView2"
            android:layout_weight="5"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:text="@string/subject2"
            android:gravity="center" />
        <Button
            android:background="@drawable/menubutton"
            android:id="@+id/button9"
            android:textSize="@dimen/_13sdp"
            android:layout_weight="4"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:onClick="subject2"
            android:text="@string/btn2_level1" />
        <Button
            android:id="@+id/button26"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject2"
            android:text="@string/btn2_level2" />
        <Button
            android:id="@+id/button30"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject2"
            android:text="@string/btn2_level3" />
        <Button
            android:id="@+id/button14"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject2"
            android:text="@string/btn2_level4" />
        <Button
            android:id="@+id/button21"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject2"
            android:text="@string/btn2_level5" />
    </LinearLayout>

    <LinearLayout
        android:splitMotionEvents="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0px"
        android:layout_marginBottom="@dimen/_5sdp">

        <TextView
            android:textColor="@color/color4"
            android:textSize="@dimen/_17sdp"
            android:id="@+id/textView3"
            android:layout_weight="5"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:text="@string/subject3"
            android:gravity="center" />
        <Button
            android:id="@+id/button11"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:onClick="subject3"
            android:text="@string/btn3_level1"
            android:background="@drawable/menubutton" />
        <Button
            android:id="@+id/button25"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject3"
            android:text="@string/btn3_level2" />
        <Button
            android:id="@+id/button31"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject3"
            android:text="@string/btn3_level3" />

        <Button
            android:id="@+id/button17"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="4"
            android:enabled="false"
            android:onClick="subject3"
            android:text="@string/btn3_level4" />

        <Button
            android:id="@+id/button22"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject3"
            android:text="@string/btn3_level5" />
    </LinearLayout>

    <LinearLayout
        android:splitMotionEvents="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0px"
        android:layout_marginBottom="@dimen/_5sdp">

        <TextView

            android:textColor="@color/color4"
            android:textSize="@dimen/_17sdp"
            android:id="@+id/textView4"
            android:layout_weight="5"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:text="@string/subject4"
            android:gravity="center" />
        <Button
            android:id="@+id/button12"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:onClick="subject4"
            android:text="@string/btn4_level1"
            android:background="@drawable/menubutton" />
        <Button
            android:id="@+id/button24"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject4"
            android:text="@string/btn4_level2" />
        <Button
            android:id="@+id/button15"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject4"
            android:text="@string/btn4_level3" />
        <Button
            android:id="@+id/button18"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject4"
            android:text="@string/btn4_level4" />
        <Button
            android:id="@+id/button29"
            android:layout_weight="4"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:onClick="subject4"
            android:text="@string/btn4_level5" />
    </LinearLayout>

    <LinearLayout
        android:splitMotionEvents="false"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/subject5"
            android:textColor="@color/color4"
            android:textSize="@dimen/_17sdp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="4"
            android:background="@drawable/menubutton"
            android:onClick="subject5"
            android:text="@string/btn5_level1" />

        <Button
            android:id="@+id/button23"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:textSize="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="4"
            android:enabled="false"
            android:onClick="subject5"
            android:text="@string/btn5_level2" />

        <Button
            android:id="@+id/button16"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="4"
            android:enabled="false"
            android:onClick="subject5"
            android:text="@string/btn5_level3" />

        <Button
            android:id="@+id/button19"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="4"
            android:enabled="false"
            android:onClick="subject5"
            android:text="@string/btn5_level4" />

        <Button
            android:id="@+id/button32"
            android:layout_width="0px"
            android:textSize="@dimen/_13sdp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:enabled="false"
            android:onClick="subject5"
            android:text="@string/btn5_level5" />
    </LinearLayout>
</LinearLayout>
